--- a/Website For CS 188/class.html
+++ b/Website For CS 188/class.html
@@ -100,7 +100,7 @@
 					<h1>Jonathan Knowles</h1>
 					<p class="job-title">Designer / Developer</p>
 					<p class="about">
-					Cunning, Handsome, about as smart as they come, not to mention extrodinarily humble. Man in the streets, freak in the sheets.
+					Cunning, Handsome, about as smart as they come, not to mention extrodinarily humble. He knows his way around HTML, CSS, and JavaScript and can't wait to learn more!
 					</p>
 					<a href="#" class="btn" id=about>Contact</a>
 					<ul class="social-media">
